
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int vm_address_t ;
typedef int uint64_t ;
typedef scalar_t__ kern_return_t ;
typedef int io_connect_t ;


 scalar_t__ KERN_INVALID_ADDRESS ;
 scalar_t__ KERN_NO_SPACE ;
 scalar_t__ KERN_SUCCESS ;
 int find_intel_accelerator_addr (int ,int ) ;
 int find_second_addr (int ,int ,int ) ;
 int get_accel_connection () ;
 int get_some_client () ;
 int mach_task_self () ;
 int printf (char*,...) ;
 scalar_t__ vm_allocate (int ,int *,int,int ) ;
 scalar_t__ vm_deallocate (int ,int,int) ;

int main(){
  kern_return_t err;


  int var = 0;
  err = vm_deallocate(mach_task_self(), 0x0, 0x1000);
  if (err != KERN_SUCCESS){
    printf("%x\n", err);
  }
  vm_address_t addr = 0;
  err = vm_allocate(mach_task_self(), &addr, 0x1000, 0);
  if (err != KERN_SUCCESS){
    if (err == KERN_INVALID_ADDRESS){
      printf("invalid address\n");
    }
    if (err == KERN_NO_SPACE){
      printf("no space\n");
    }
    printf("%x\n", err);
  }
  char* np = 0;
  for (int i = 0; i < 0x1000; i++){
    np[i] = 'A';
  }

  io_connect_t accel_connect = get_accel_connection();


  io_connect_t a_client = get_some_client();

  uint64_t first_addr = find_intel_accelerator_addr(accel_connect, a_client);
  uint64_t second_addr = find_second_addr(first_addr, accel_connect, a_client);
  return 0;
}
